<resources>
    <string name="app_name">News</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">abc@gmail.com</string>
    <string name="enter_your_phone">0123456..</string>
    <string name="password">password</string>
    <string name="don_t_have_account">don\'t have account?</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="user_name">user name</string>
    <string name="confirm_password">confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="profile">Profile</string>
    <string name="news">News</string>
    <string name="favorite">Favorite</string>
    <string name="open_in_browser">open in browser</string>
    <string name="read_more">read more</string>
    <string name="change_password">change password</string>
    <string name="old_pass">old password</string>
    <string name="new_password">new password</string>
    <string name="change">change</string>

</resources>